# aoc22-nostd

./: .gitignore  Cargo.toml  README.md  run.sh
.cargo/: config.toml
src/: day06.rs  main.rs
