[package]
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "aoc22-nostd"
version = "0.1.0"

[dependencies]
atoi = { version = "2.0.0", default-features = false }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
heapless = "0.7.16"
nom = { version = "7.1.1", default-features = false }
panic-halt = "0.2.0"
panic-semihosting = { version = "0.6.0", features = ["exit"] }
safe-regex = "0.2.5"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
